--- a/anatomy.html
+++ b/anatomy.html
@@ -12,7 +12,7 @@
       <h1><a href="#">Lovely Unicorn</a></h1>
       <ul id="navigation">
         <li><a href="diet.html">Diet</a></li>
-        <li><a href="anatomy.html">Anatomy & Biology</a></li>
+        <li><strong><u><a href="anatomy.html">Anatomy & Biology</a></u></strong></li>
         <li><a href="index.html">Home</a></li>
       </ul>
     </div>
