--- a/diet.html
+++ b/diet.html
@@ -11,7 +11,7 @@
     <div id="header">
       <h1><a href="#">Lovely Unicorn</a></h1>
       <ul id="navigation">
-        <li><a href="diet.html">Diet</a></li>
+        <li><strong><u><a href="diet.html">Diet</a></u></strong></li>
         <li><a href="anatomy.html">Anatomy & Biology</a></li>
         <li><a href="index.html">Home</a></li>
       </ul>
