--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <div id="container" >
   <div id="headerWrap">
     <div id="header">
-      <h1><a href="#">Lovely Unicorn</a></h1>
+      <h1><a href="index.html">Lovely Unicorn</a></h1>
       <ul id="navigation">
         <li><a href="diet.html">Diet</a></li>
         <li><a href="anatomy.html">Anatomy & Biology</a></li>
-        <li><a href="#">Home</a></li>
+        <li><strong><u><a href="#">Home</a></u></strong></li>
       </ul>
     </div>
   </div>
