--- a/anatomy.html
+++ b/anatomy.html
@@ -9,7 +9,7 @@
 <div id="container" >
   <div id="headerWrap">
     <div id="header">
-      <h1><a href="#">Lovely Unicorn</a></h1>
+      <h1><a href="index.html">Lovely Unicorn</a></h1>
       <ul id="navigation">
         <li><a href="diet.html">Diet</a></li>
         <li><strong><u><a href="anatomy.html">Anatomy & Biology</a></u></strong></li>
