--- a/anatomy.html
+++ b/anatomy.html
@@ -28,7 +28,7 @@
         <h2>How a unicorn breathes?</h2>
         <p>A unicorn breathes rainbows like a dragon breathes fire.</p>
         <h2>How long does a unicorn live?</h2>
-        <p>The Unicorn is truly a breath-taking animal as those lucky enough to have encountered one would tell you. It is taller than an average hForever until you kill it for its magical properties.</p>
+        <p>The Unicorn is truly a breath-taking animal as those lucky enough to have encountered one would tell you. It is taller than an average horse. It lives forever until you kill it for its magical properties.</p>
       </div>
     </div>
 
