--- a/anatomy.html
+++ b/anatomy.html
@@ -13,6 +13,7 @@
       <ul id="navigation">
         <li><a href="diet.html">Diet</a></li>
         <li><strong><u><a href="anatomy.html">Anatomy & Biology</a></u></strong></li>
+                <li><a href="taxonomy.html">Taxonomy</a></li>
         <li><a href="index.html">Home</a></li>
       </ul>
     </div>
@@ -31,7 +32,6 @@
         <p>The Unicorn is truly a breath-taking animal as those lucky enough to have encountered one would tell you. It is taller than an average horse. It lives forever until you kill it for its magical properties.</p>
       </div>
     </div>
-
   </div>
   <div id="footer">
     <p>&copy; 2006 Star Wars Inc. | Design by <a href="http://www.mikeyarmish.com">Stelios Strongylis</a></p>
