--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <ul id="navigation">
         <li><a href="diet.html">Diet</a></li>
         <li><a href="anatomy.html">Anatomy & Biology</a></li>
+        <li><a href="taxonomy.html">Taxonomy</a></li>
         <li><strong><u><a href="#">Home</a></u></strong></li>
       </ul>
     </div>
