--- a/anatomy.html
+++ b/anatomy.html
@@ -11,9 +11,10 @@
     <div id="header">
       <h1><a href="index.html">Lovely Unicorn</a></h1>
       <ul id="navigation">
+        <li><a href="gallery.html">Gallery</a></li>
         <li><a href="diet.html">Diet</a></li>
         <li><strong><u><a href="anatomy.html">Anatomy & Biology</a></u></strong></li>
-                <li><a href="taxonomy.html">Taxonomy</a></li>
+        <li><a href="taxonomy.html">Taxonomy</a></li>
         <li><a href="index.html">Home</a></li>
       </ul>
     </div>
