--- a/gallery.html
+++ b/gallery.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 	<head>
-		<title>Simple and Effective Photo Gallery with HTML and JavaScript</title>
+		<title>Unicorn</title>
 	</head>
-
 	<body>
-<div class="gallery" align="center">
-<h3>Simple HTML Photo Gallery with JavaScript</h3>
-<div class="thumbnails">
-	<img onmouseover="preview.src=img1.src" name="img1" src="http://bit.ly/2rz3hy" alt="" />
-	<img onmouseover="preview.src=img2.src" name="img2" src="http://bit.ly/1ug1e6" alt="" />
-	<img onmouseover="preview.src=img3.src" name="img3" src="http://bit.ly/1yIAYc" alt="" />
-	<img onmouseover="preview.src=img4.src" name="img4" src="http://bit.ly/2LHyDW" alt="" />
-	<img onmouseover="preview.src=img5.src" name="img5" src="http://bit.ly/2wyHSR" alt="" />
-	<img onmouseover="preview.src=img6.src" name="img6" src="http://bit.ly/yRo1i" alt="" />
-</div>
-<div class="preview" align="center">
-	<img name="preview" src="http://bit.ly/2rz3hy" alt=""/>
-</div>
+	<div class="gallery" align="center">
+		<h3>Some Unicorns are the following:</h3>
+		<div class="thumbnails">
+			<img onmouseover="preview.src=img1.src" name="img1" src="images/img1.gif" alt="" />
+			<img onmouseover="preview.src=img2.src" name="img2" src="images/img2.gif" alt="" />
+			<img onmouseover="preview.src=img3.src" name="img3" src="images/img3.gif" alt="" />
+			<img onmouseover="preview.src=img4.src" name="img4" src="images/img4.gif" alt="" />
+		</div>
+		<div class="preview" align="center">
+			<img name="preview" src="images/img1.gif" alt=""/>
+		</div>
+	</div>
 
-</div> <!-- Close the gallery div -->
 <style type="text/css">
 	body {
 		background: #222;
