--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="header">
       <h1><a href="index.html">Lovely Unicorn</a></h1>
       <ul id="navigation">
+        <li><a href="gallery.html">Gallery</a></li>
         <li><a href="diet.html">Diet</a></li>
         <li><a href="anatomy.html">Anatomy & Biology</a></li>
         <li><a href="taxonomy.html">Taxonomy</a></li>
