--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
-	<head>
-		<title>Unicorn</title>
-	</head>
-	<body>
-	<div class="gallery" align="center">
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
+<title>Unicorn</title>
+<meta http-equiv="content-type" content="application/xhtml+xml; charset=iso-8859-1" />
+<link rel="stylesheet" href="mike02.css" type="text/css" />
+</head>
+<body>
+<div id="container" >
+  <div id="headerWrap">
+    <div id="header">
+      <h1><a href="index.html">Lovely Unicorn</a></h1>
+      <ul id="navigation">
+        <li><strong><u><a href="gallery.html">Gallery</a></strong></u></li>
+        <li><a href="diet.html">Diet</a></li>
+        <li><a href="anatomy.html">Anatomy & Biology</a></li>
+        <li><a href="taxonomy.html">Taxonomy</a></li>
+        <li><a href="index.html">Home</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="gallery" align="center">
+<h3>Simple HTML Photo Gallery with JavaScript</h3>
+<div class="gallery" align="center">
 		<h3>Some Unicorns are the following:</h3>
 		<div class="thumbnails">
 			<img onmouseover="preview.src=img1.src" name="img1" src="images/img1.gif" alt="" />
@@ -16,6 +34,7 @@
 			<img name="preview" src="images/img1.gif" alt=""/>
 		</div>
 	</div>
+
 
 <style type="text/css">
 	body {
@@ -46,7 +65,9 @@
 		height: 500px;
 	}
 </style>
+  <div id="footer">
+    <p>&copy; 2006 Star Wars Inc. | Design by <a href="http://www.mikeyarmish.com">Stelios Strongylis</a></p>
+  </div>
+</div>
 </body>
-</html>
-	</body>
 </html>
