Menu fixed topbar

--- a/name.html
+++ b/name.html
@@ -27,5 +27,17 @@ The unicorn has a wide range of appearances, depending on the subspecies. For ex
 <h1>
 
 </h1>
+
+
+<style type="text/css">#header{
+   position:fixed;
+   top:0;
+   left:0;
+   right:0;
+   width:80%;
+   height:60px;
+   /*background-color:black;*/
+}
+</style>
 </body>
 <html>
