--- a/anatomy.html
+++ b/anatomy.html
@@ -11,6 +11,7 @@
     <div id="header">
       <h1><a href="index.html">Lovely Unicorn</a></h1>
       <ul id="navigation">
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="diet.html">Diet</a></li>
         <li><strong><u><a href="anatomy.html">Anatomy & Biology</a></u></strong></li>
