--- a/gallery.html
+++ b/gallery.html
@@ -12,10 +12,11 @@
     <div id="header">
       <h1><a href="index.html">Lovely Unicorn</a></h1>
       <ul id="navigation">
-        <li><strong><u><a href="gallery.html">Gallery</a></strong></u></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><strong><u><a href="gallery.html">Gallery</a></u></strong></li>
         <li><a href="diet.html">Diet</a></li>
         <li><a href="anatomy.html">Anatomy & Biology</a></li>
-        <li><a href="taxonomy.html">Taxonomy</a></li>
+        <li><strong><u><a href="taxonomy.html">Taxonomy</a></u></strong></li>
         <li><a href="index.html">Home</a></li>
       </ul>
     </div>
@@ -35,7 +36,10 @@
 
 
 <style type="text/css">
-
+	body {
+		background: #222;
+		margin-top: 59px;
+	}
 
 	h3 {
 	}
