--- a/taxonomy.html
+++ b/taxonomy.html
@@ -11,15 +11,16 @@
     <div id="header">
       <h1><a href="index.html">Lovely Unicorn</a></h1>
       <ul id="navigation">
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="diet.html">Diet</a></u></strong></li>
+        <li><a href="diet.html">Diet</a></li>
         <li><a href="anatomy.html">Anatomy & Biology</a></li>
-        <li><strong><u><a href="taxonomy.html">Taxonomy</a></strong></u></li>
+        <li><a href="taxonomy.html">Taxonomy</a></u></strong></li>
         <li><a href="index.html">Home</a></li>
       </ul>
     </div>
   </div>
-  <div id="content">
+    <div id="content">
     <div id="contentHeader">
 
     </div>
