upload ref page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="diet.html">Diet</a></li>
         <li><a href="anatomy.html">Anatomy & Biology</a></li>
         <li><a href="taxonomy.html">Taxonomy</a></li>
+        <li><a href="ref.html">Reference</a></li>
         <li><strong><u><a href="#">Home</a></u></strong></li>
       </ul>
     </div>
