--- a/anatomy.html
+++ b/anatomy.html
@@ -15,6 +15,7 @@
         <li><a href="diet.html">Diet</a></li>
         <li><strong><u><a href="anatomy.html">Anatomy & Biology</a></u></strong></li>
         <li><a href="taxonomy.html">Taxonomy</a></li>
+        <li><a href="ref.html">Reference</a></li>
         <li><a href="index.html">Home</a></li>
       </ul>
     </div>
