--- a/gallery.html
+++ b/gallery.html
@@ -16,6 +16,7 @@
         <li><a href="diet.html">Diet</a></li>
         <li><a href="anatomy.html">Anatomy & Biology</a></li>
         <li><a href="taxonomy.html">Taxonomy</a></li>
+        <li><a href="ref.html">Reference</a></li>
         <li><a href="index.html">Home</a></li>
       </ul>
     </div>
